Fix added parcels not showing owners
* Remove dialog change until we can fix differently

--- a/portal-frontend/src/styles/dialog.scss
+++ b/portal-frontend/src/styles/dialog.scss
@@ -3,5 +3,4 @@
   position: absolute;
   z-index: 1000;
   overflow: auto;
-  pointer-events: auto !important;
 }
